# INC-BearWithMe

./: .gitignore  App.tsx  FIXES_APPLIED.md  README.md  STRUCTURE.md  SignUpScreen.tsx  app.json  package-lock.json  package.json  tsconfig.json
app/: mood.tsx
app/(tabs)/: index.tsx  profile.tsx
backend/: .env.example  .gitignore  README.md  error.txt  pyproject.toml  test_gemini.py
backend/app/: auth.py  config.py  database.py  main.py
backend/app/api/: auth.py  chat.py  journals.py  moods.py  patterns.py  users.py
backend/app/core/: dependencies.py  security.py
backend/app/models/: __init__.py  chat.py  journal.py  mood.py  pattern.py  user.py
backend/app/routers/: chat.py  journals.py  moods.py  users.py
backend/app/schemas/: __init__.py  auth.py  chat.py  journal.py  mood.py  user.py
backend/app/services/: adam_agent.py  auth_service.py
backend/app/utils/: logging.py
frontend/: .eslintrc.json  app.json  package-lock.json  package.json  test_chat.js  tsconfig.json
frontend/.claude/: settings.local.json
frontend/app/: _layout.tsx  guide.tsx  onboarding.tsx
frontend/screens/: ChatScreen.tsx  HomeScreen.tsx  JournalWritingScreen.tsx  JournalsScreen.tsx  LoginScreen.tsx  OnboardingComplete.tsx  OnboardingStep1.tsx  OnboardingStep2.tsx  (+4 more)
screens/: ChatScreen.tsx  HomeScreen.tsx  JournalCompletedScreen.tsx  JournalDetailScreen.tsx  JournalStep3Screen.tsx  JournalWritingScreen.tsx  JournalsScreen.tsx  LoginScreen.tsx  OnboardingComplete.tsx  OnboardingStep1.tsx  OnboardingStep2.tsx  OnboardingStep3.tsx  ProfileScreen.tsx  SignUpScreen.tsx
(+31 files in other folders)
